Fixed javascript issues

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <p class="copyright">© 2025 HazikMushtaq. All rights reserved.</p>
         </div>
     </footer>
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
